fix height issue on firefox

--- a/frontend/style/components/_components.boxOnImage.scss
+++ b/frontend/style/components/_components.boxOnImage.scss
@@ -23,7 +23,7 @@
 
   @include mq($from: tablet) {
     padding: 10%;
-    min-height: 560px;
+    //min-height: 560px;
     margin: -$spacing 0 $spacing 0;
   }
 
